--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -581,7 +581,8 @@ pre code {
 
 @media (min-width: 1200px) {
   .container {
-    max-width: 1140px;
+    /* max-width: 1140px; */
+    max-width: 2000px;
   }
 }
 
