--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -310,15 +310,15 @@ ul.cart-inner-info li {
 
 /*--/slider--*/
 
-.carousel-item {
+/* .carousel-item {
     background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
     background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
     background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
     background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
     background-size: cover;
-}
+} */
 
-.carousel-item.item2 {
+/* .carousel-item.item2 {
     background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
     background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
     background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
@@ -340,7 +340,7 @@ ul.cart-inner-info li {
     background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner4.jpg) no-repeat;
     background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner4.jpg) no-repeat;
     background-size: cover;
-}
+} */
 
 .carousel-caption h2,
 .carousel-caption h3 {
@@ -1313,15 +1313,7 @@ input#datepicker {
 
 /*-- //Popup-Box --*/
 
-.banner_inner {
-    background: url(../images/banner-mid.jpg)no-repeat 0px -73px;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    moz-background-size: cover;
-    min-height: 180px;
-}
+
 
 ul.short {
     text-align: left;
@@ -1420,7 +1412,7 @@ a.b-home:hover {
 }
 /*-- //error --*/
 .middle-text-info {
-    background: url(../images/banner-mid.jpg) no-repeat 0px 0px;
+    /* background: url(../images/banner-mid.jpg) no-repeat 0px 0px; */
     background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
