new with responsive issues

--- a/public/assets/css/styleold.css
+++ b/public/assets/css/styleold.css
@@ -4,7 +4,9 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
-
+/* .pagination {
+    padding: 10px;
+} */
 html,
 body {
     margin: 0;
@@ -316,9 +318,9 @@ ul.cart-inner-info li {
     background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
     background: linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner1.jpg) no-repeat;
     background-size: cover;
-}
+} */
 
-.carousel-item.item2 {
+/* .carousel-item.item2 {
     background: -webkit-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
     background: -moz-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
     background: -ms-linear-gradient(rgba(23, 22, 23, 0.2), rgba(23, 22, 23, 0.5)), url(../images/banner2.jpg) no-repeat;
@@ -1313,15 +1315,7 @@ input#datepicker {
 
 /*-- //Popup-Box --*/
 
-/* .banner_inner {
-    background: url(../images/banner-mid.jpg)no-repeat 0px -73px;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    -ms-background-size: cover;
-    moz-background-size: cover;
-    min-height: 180px;
-} */
+
 
 ul.short {
     text-align: left;
@@ -1420,7 +1414,7 @@ a.b-home:hover {
 }
 /*-- //error --*/
 .middle-text-info {
-    background: url(../images/banner-mid.jpg) no-repeat 0px 0px;
+    /* background: url(../images/banner-mid.jpg) no-repeat 0px 0px; */
     background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -1756,7 +1750,7 @@ ul.links li a:hover {
 @media(max-width:1280px) {
 
     .banner_inner {
-        background: url(../images/banner4.jpg)no-repeat 0px -55px;
+        /* background: url(../images/banner4.jpg)no-repeat 0px -55px; */
         background-size: cover;
         -webkit-background-size: cover;
         -o-background-size: cover;
@@ -1906,7 +1900,7 @@ ul.links li a:hover {
     .owl-item.active {
        padding:0px;
     }
- 
+
 }
 
 @media(max-width:1024px) {
@@ -2092,7 +2086,7 @@ ul.links li a:hover {
         min-height: 271px;
         padding: 3em 0 0 0;
     }
-  
+
 }
 
 @media(max-width:768px) {
@@ -2103,7 +2097,7 @@ ul.links li a:hover {
     }
     .carousel-item {
         height: 26em;
-    }  
+    }
       .bottom-sub-grid {
         padding: 1em 4em;
     }
@@ -2175,12 +2169,12 @@ ul.links li a:hover {
 }
 
 @media(max-width:640px) {
-   
+
     ul.short {
         text-align: left;
         padding: 3em 0em 0 1.3em;
     }
-  
+
     .ser-first-grid p {
         padding: 0 5px;
     }
@@ -2205,7 +2199,7 @@ ul.links li a:hover {
     }
     .carousel-caption {
         bottom: 4em;
-    }   
+    }
     .nav-mega .dropdown-menu.mega-menu>li {
         padding: 2em 1em;
     }
@@ -2384,6 +2378,7 @@ ul.links li a:hover {
         width: 100%;
         height: 60%;
     }
+
 }
 
 /*-- //responsive media queries --*/
