--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,9 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
-
+/* .pagination {
+    padding: 10px;
+} */
 html,
 body {
     margin: 0;
@@ -2376,6 +2378,7 @@ ul.links li a:hover {
         width: 100%;
         height: 60%;
     }
+
 }
 
 /*-- //responsive media queries --*/
