#slider store #view

--- a/public/argon/css/argon.css
+++ b/public/argon/css/argon.css
@@ -60,6 +60,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+}
+
 html
 {
     font-family: sans-serif;
