--- a/public/argon/css/carosel.css
+++ b/public/argon/css/carosel.css
@@ -92,3 +92,12 @@
         .demo:hover {
           opacity: 1;
         }
+
+        .imgs {
+            height: 120px;
+          }
+
+          .cover {
+            width: 260px;
+            object-fit: cover;
+          }
